# Legacy-Fuzz-deluxe-

./: .gitignore  CMakeLists.txt  CMakeLists_GUITest.txt  README.md  TEST_GUI.md  build_guitest.bat
Releases/Legacy Fuzz (Deluxe).vst3/Contents/Resources/: moduleinfo.json
Releases/Legacy Fuzz.vst3/Contents/Resources/: moduleinfo.json
Source/: GUITestApp.cpp  JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
